Separación de Componentes

--- a/components/nav.html
+++ b/components/nav.html
@@ -1,20 +1,23 @@
-<nav class="navbar">
-    <div class="nav-container">
-        <div class="nav-logo">
-            <img src="img/logo.jpg" alt="Logo Evelio Bustos" style="height: 40px; width: auto;">
-            <span>Evelio Bustos</span>
-        </div>
-        <ul class="nav-menu">
-            <li><a href="#inicio" class="nav-link">Inicio</a></li>
-            <li><a href="#servicios" class="nav-link">Servicios</a></li>
-            <li><a href="#experiencia" class="nav-link">Experiencia</a></li>
-            <li><a href="#contacto" class="nav-link">Contacto</a></li>
-        </ul>
-        <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-    </div>
-</nav>
+<nav class="navbar" aria-label="Menú principal">
+  <div class="nav-container">
+    <div class="nav-logo">
+  <a href="#hero">
+    <img src="img/5b.png" alt="Logo" class="logo-img" />
+    <span>Evelio Bustos</span>
+  </a>
+</div>
 
+    <ul class="nav-menu">
+      <li><a href="#hero" class="nav-link">Inicio</a></li>
+      <li><a href="#servicios" class="nav-link">Servicios</a></li>
+      <li><a href="#experiencia" class="nav-link">Experiencia</a></li>
+      <li><a href="#testimonios" class="nav-link">Testimonios</a></li>
+      <li><a href="#contacto" class="nav-link">Contacto</a></li>
+    </ul>
+    <div class="hamburger" aria-label="Menú móvil" role="button" tabindex="0">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </div>
+</nav>
