Configuración correo de envío.

--- a/components/contacto.html
+++ b/components/contacto.html
@@ -40,7 +40,7 @@
 
         <form action="https://formsubmit.co/rody216@gmail.com" method="POST" id="contactForm">
           <!-- REDIRECCIÓN Y CONFIGURACIÓN -->
-          <input type="hidden" name="_next" value="https://tusitio.com/index.html" />
+          <input type="hidden" name="_next" value="https://rody216.github.io/contador/index.html" />
           <input type="hidden" name="_captcha" value="false" />
           <input type="hidden" name="_template" value="box" />
 
