Correcciones a la Página gracias.

--- a/components/nav.html
+++ b/components/nav.html
@@ -8,11 +8,11 @@
 </div>
 
     <ul class="nav-menu">
-      <li><a href="#hero" class="nav-link">Inicio</a></li>
-      <li><a href="#servicios" class="nav-link">Servicios</a></li>
-      <li><a href="#experiencia" class="nav-link">Experiencia</a></li>
-      <li><a href="#testimonios" class="nav-link">Testimonios</a></li>
-      <li><a href="#contacto" class="nav-link">Contacto</a></li>
+      <li><a href="../index.html#hero" class="nav-link">Inicio</a></li>
+      <li><a href="../index.html#servicios" class="nav-link">Servicios</a></li>
+      <li><a href="../index.html#experiencia" class="nav-link">Experiencia</a></li>
+      <li><a href="../index.html#testimonios" class="nav-link">Testimonios</a></li>
+      <li><a href="../index.html#contacto" class="nav-link">Contacto</a></li>
     </ul>
     <div class="hamburger" aria-label="Menú móvil" role="button" tabindex="0">
       <span class="bar"></span>
