Correcciones al cargue del nav 2.

--- a/components/nav.html
+++ b/components/nav.html
@@ -1,18 +1,18 @@
 <nav class="navbar" aria-label="Menú principal">
   <div class="nav-container">
     <div class="nav-logo">
-  <a href="#hero">
-    <img src="img/5b.png" alt="Logo" class="logo-img" />
+    <a href="/contador/#hero">
+    <img src="/contador/img/5b.png" alt="Logo" class="logo-img" id="logo" />
     <span>Evelio Bustos</span>
-  </a>
+    </a>
 </div>
 
     <ul class="nav-menu">
-      <li><a href="../index.html#hero" class="nav-link">Inicio</a></li>
-      <li><a href="../index.html#servicios" class="nav-link">Servicios</a></li>
-      <li><a href="../index.html#experiencia" class="nav-link">Experiencia</a></li>
-      <li><a href="../index.html#testimonios" class="nav-link">Testimonios</a></li>
-      <li><a href="../index.html#contacto" class="nav-link">Contacto</a></li>
+      <li><a href="/contador/#hero" class="nav-link">Inicio</a></li>
+      <li><a href="/contador/#servicios" class="nav-link">Servicios</a></li>
+      <li><a href="/contador/#experiencia" class="nav-link">Experiencia</a></li>
+      <li><a href="/contador/#testimonios" class="nav-link">Testimonios</a></li>
+      <li><a href="/contador/#contacto" class="nav-link">Contacto</a></li>
     </ul>
     <div class="hamburger" aria-label="Menú móvil" role="button" tabindex="0">
       <span class="bar"></span>
