Correcciones al footer de gracias.

--- a/components/nav.html
+++ b/components/nav.html
@@ -2,7 +2,7 @@
   <div class="nav-container">
     <div class="nav-logo">
     <a href="/contador/#hero">
-    <img src="/contador/img/5b.png" alt="Logo" class="logo-img" id="logo" />
+    <img src="../contador/img/5b.png" alt="Logo" class="logo-img" id="logo" />
     <span>Evelio Bustos</span>
     </a>
 </div>
